<resources>

    <!-- Strings for the home page -->
    <string name="app_name">MyMuseum</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_new_settings">Settings</string>
    <string name="search_message">Search For A Museum Near You</string>
    <string name="search_btn">Search</string>
    <string name="findme_btn">Find Me</string>

    <!-- help page strings -->
    <string name="help_title">HELP</string>
    <string name="help_p1">Enter your postcode and hit search to find museums nearby.  OR use the find me button@STR</string>
    <string name="help_p2">Click on a location and a list of items you are nearby will load up. Click on one to learn more about it, or hold click to add it your history.</string>
    <string name="help_foot">ENJOY THE APP</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_switch_language">Switch Language</string>
    <string name="pref_description_switch_language">Switch Language from English to Welsh
    </string>

    <string name="click_me">Click on me to check them out! </string>
    <string name="beacons_text">Hey! You are near </string>
    <string name="beacons_text_2">Beacons</string>
    <string name="beacons_title">There are beacons near you!</string>
    <string name="action_home">Home</string>

    <string name="historyLabel">Your History</string>
    <string name="beaconsLabel">Beacons Nearby</string>

    <string name="pref_title_enable_mobiledata">Enbale Data Downloads</string>
    <string name="pref_description_enable_mobiledata">Allow data to be downloaded through Mobile data
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="state">Open</string>
    <string name="strCity">City</string>

    <string name="citySearch">Enter City....</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="action_login">Admin Login</string>
    <string name="action_help">Help Page</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="action_history">History</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="help">I NEED HELP</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="flagged">Your help flag has been sent to a helper" Stand by!</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="stillHelp">I STILL NEED HELP</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="beaconsNearby">Beacons Nearby</string>
    <string name="AdminActivity">Admin Portal</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_admin_login">Admin Sign in</string>
    <string name="hold">Hold click on me..</string>
    <string name="empty">Please enter a valid museum name..</string>

    <string name="delete">Delete</string>
    <string name="info1">To take full advantage of this app, please connect to either your mobile 3G/4G data or connect to the museums free wireless service.</string>
    <string name="info2">Do not worry you can still use the app, however you may not be able to view sound or video clips.</string>
    <string name="continue_anyway">Continue Anyway</string>
    <string name="connection">No Connection</string>
    <string name="intro">Hello, You are not connected to the internet!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_movies">MoviesActivity</string>

    <string name="eng_lang">Change To English</string>
    <string name="lang_welsh">Change to Welsh</string>

    <string name="loaded"> Loaded!</string>
    <string name="options">Options</string>
    <string name="add">Add to history</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="added_history">Added to history!</string>
    <string name="museum_loaded">Museum Loaded</string>

    <!-- Help page -->
    <string name="help1">1) Click on a museum on the homepage, or search for one you know, or use the find me button to help you with your search.</string>
    <string name="help2">2) Once you have clicked on a museum you will see a list of data load up. If nothing loads up, ensure your bluetooth is turned on that that you are in the correct museum.</string>
    <string name="help3">3) If you click on an item in the list, you will load up that artifcats information. Alternatively you can hold tap on an item to save it to your history so you can see this again in the future.</string>

    <string name="messages">Help Center</string>
    <string name="centerTitle">Help</string>
</resources>
